// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GooglePayLogo stories snapshot > Decorative story renders and matches snapshot 1`] = `
<img
  alt=""
  aria-hidden="true"
  class=" h-4 w-auto object-contain"
  height="16"
  src="__ASSET_MOCK__"
  width="48"
/>
`;

exports[`GooglePayLogo stories snapshot > Default story renders and matches snapshot 1`] = `
<img
  alt="Google Pay"
  class=" h-4 w-auto object-contain"
  height="16"
  src="__ASSET_MOCK__"
  width="48"
/>
`;

exports[`GooglePayLogo stories snapshot > Inverted story renders and matches snapshot 1`] = `
<div
  style="background-color: rgb(0, 0, 0); padding: 20px; border-radius: 8px;"
>
  <img
    alt="Google Pay"
    class=" h-4 w-auto object-contain"
    height="16"
    src="__ASSET_MOCK__"
    style="filter: brightness(0) invert(1);"
    width="48"
  />
</div>
`;

exports[`GooglePayLogo stories snapshot > WithCustomClassName story renders and matches snapshot 1`] = `
<img
  alt="Google Pay"
  class="custom-class h-4 w-auto object-contain"
  height="16"
  src="__ASSET_MOCK__"
  width="48"
/>
`;
